--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,12 +1,12 @@
 #Minecraft server properties
-#Mon Sep 01 02:43:25 UTC 2025
+#Mon Sep 01 03:47:38 UTC 2025
 accepts-transfers=false
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
 bug-report-link=
-difficulty=harcore
+difficulty=hard
 enable-command-block=false
 enable-jmx-monitoring=false
 enable-query=false
@@ -17,7 +17,7 @@ enforce-whitelist=false
 entity-broadcast-range-percentage=100
 force-gamemode=false
 function-permission-level=2
-gamemode=survival
+gamemode=hardcore
 generate-structures=true
 generator-settings={}
 hardcore=true
@@ -52,12 +52,12 @@ resource-pack-prompt=
 resource-pack-sha1=
 server-ip=
 server-port=25565
-simulation-distance=10
+simulation-distance=32
 spawn-monsters=true
 spawn-protection=16
 sync-chunk-writes=true
 text-filtering-config=
 text-filtering-version=0
 use-native-transport=true
-view-distance=10
+view-distance=32
 white-list=false
